[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/squid/sprite_0.png" type="Texture" id=1]
[ext_resource path="res://assets/images/squid/sprite_1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/squid/sprite_2.png" type="Texture" id=3]
[ext_resource path="res://source/SquidRepresentation/SquidRepresentation.gd" type="Script" id=4]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Mouth:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 20, 20, 20 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "talk"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Mouth:scale:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 30.0, 20.0 ]
}

[node name="SquidRepresentation" type="Spatial"]
script = ExtResource( 4 )

[node name="Pivot" type="Spatial" parent="."]

[node name="EyebrowLeftUp" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 15, 0, 0, 0, 8, -2, 1.9, 0 )
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 1 )

[node name="EyeLeft" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 11, 0, 0, 0, 8, -2, 0.9, 0 )
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 2 )

[node name="EyebrowLeftDown" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 15, 0, 0, 0, 8, -2, -0.1, 0 )
flip_v = true
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 1 )

[node name="EyebrowRightUp" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 15, 0, 0, 0, 8, 2, 1.9, 0 )
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 1 )

[node name="EyeRight" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 11, 0, 0, 0, 8, 2, 0.9, 0 )
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 2 )

[node name="EyebrowRightDown" type="Sprite3D" parent="Pivot"]
transform = Transform( 8, 0, 0, 0, 15, 0, 0, 0, 8, 2, -0.1, 0 )
flip_v = true
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 1 )

[node name="Mouth" type="Sprite3D" parent="Pivot"]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1.7, 0 )
modulate = Color( 1, 0.156863, 0.870588, 1 )
double_sided = false
no_depth_test = true
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 5.0
anims/RESET = SubResource( 2 )
anims/talk = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
